--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,38 @@
 
 .topBar {
   width: 100%;
-  height: 6rem;
+  height: 5rem;
   background-color: #ffffff;
   box-shadow: 0px 3px 20px 0px #dadada;
+}
+
+.mainIcon {
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainIcon img {
+  width: 65px;
+  height: 65px;
+}
+
+.optionCard {
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 30px;
+}
+
+.optionImage {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+.optionImage img {
+  max-width: 100%;
+  max-height: 100%;
 }
