feat: implements full system interface

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: row;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .topBar {
