--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.container {
+.appContainer {
   padding: 0;
   margin: 0;
   width: 100vw;
@@ -7,7 +7,7 @@
   flex-direction: row;
 }
 
-.content {
+.appContent {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -18,4 +18,8 @@
   height: 5rem;
   background-color: #ffffff;
   box-shadow: 0px 3px 20px 0px #dadada;
+}
+
+.router {
+  max-height: 100%;
 }
