--- a/src/pages/Catalog/style.css
+++ b/src/pages/Catalog/style.css
@@ -1,8 +1,16 @@
 .catalogContainer {
-    padding: 45px 0 0 35px;
+    padding: 45px 35px 0 35px;
 }
 
 .catalogTitle {
     font-size: 35px;
     font-weight: 600;
+}
+
+.catalogContent {
+    margin-top: 30px;
+}
+
+.catalogContainer ul {
+    display: flex;
 }
