--- a/src/components/DetailCard/style.css
+++ b/src/components/DetailCard/style.css
@@ -6,10 +6,15 @@
     padding: 30px;
     overflow: hidden;
     position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    transition: transform .3s ease;
     border-radius: 25px;
-    transition-property: right, opacity;
-    transition-duration: .35s;
-    transition-timing-function: ease;
+}
+
+.detailContainer.active {
+    transform: translateX(0);
 }
 
 .detailContainer .title {
