--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
 .appContainer {
   padding: 0;
   margin: 0;
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  min-height: 100vh;
   display: flex;
   flex-direction: row;
+  overflow-x: hidden;
 }
 
 .appContent {
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-height: 100%;
 }
 
 .router {
-  max-height: 100%;
+  height: 100%;
 }
