--- a/src/components/SideBar/style.css
+++ b/src/components/SideBar/style.css
@@ -1,9 +1,9 @@
 .sideBar {
     width: 14rem;
-    height: 100%;
+    min-height: 100%;
     background-color: #ffffff;
     box-shadow: 3px 0px 20px 0px #dadada;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .mainIcon {
