--- a/src/components/TopBar/style.css
+++ b/src/components/TopBar/style.css
@@ -5,6 +5,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 999;
     background-color: #ffffff;
     box-shadow: 0px 3px 20px 0px #dadada;
 }
