--- a/src/pages/Catalog/style.css
+++ b/src/pages/Catalog/style.css
@@ -15,6 +15,31 @@
     position: relative;
 }
 
+.header-controller {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+    justify-content: space-between;
+}
+
+.new-item-button {
+    width: 10rem;
+    height: 2rem;
+    border-radius: 10px;
+    border: none;
+    background-color: #ee8337;
+    color: white;
+    cursor: pointer;
+}
+
+.new-item-button:hover {
+    background-color: #ee6e13;
+}
+
+.new-item-button:active {
+    background-color: #c05306;
+}
+
 .itemList {
     width: 100%;
     height: 1%;
